Bring back compatibility with Java 8. Fixes #201.